--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>React30</title>
     <style>
     body{
@@ -19,10 +20,16 @@
       margin-top: -18px;
     }
 
+    .code{
+      font-size: 12px;
+      color:#000;
+      font-weight: normal;
+    }
+
     </style>
   </head>
   <body>
     <div id="root"></div>
-    <script src="/static/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
